--- a/springboot_feifei_mybatis/src/main/resources/application.yml
+++ b/springboot_feifei_mybatis/src/main/resources/application.yml
@@ -7,7 +7,7 @@ logging:
 spring:
   datasource:
     username: root
-    password: root
+    password: 123456
     url: jdbc:mysql://127.0.0.1:3306/springboot?useUnicode=true&characterEncoding=utf8
     driver-class-name: com.mysql.jdbc.Driver
 server:
